BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/Budget_CIB__c.object-meta.xml
<CustomObject>
    <label>Budget CIB</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Budget CIB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget CIB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>