BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Commissioni_CF__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_CF__c</fullName>
    <formula>Commissioni_CF_EDCM__c + Commissioni_CF_MEA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioni CF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>