BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Commissioni_CF_MEA__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_CF_MEA__c</fullName>
    <label>Commissioni CF - M&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>