BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Commissioni_NP_FS__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_NP_FS__c</fullName>
    <label>Commissioni NP FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>