BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Commissioni_Totali_FS__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_Totali_FS__c</fullName>
    <label>Commissioni Totali FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>