BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Margine_finanziario_progressivo_anno_FS__c.field-meta.xml
<CustomField>
    <fullName>Margine_finanziario_progressivo_anno_FS__c</fullName>
    <formula>SML_Progressivo_anno_FS__c * Spread_Finanziario_FS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margine finanziario progressivo anno FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>