BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Margini_Derivati_OTC__c.field-meta.xml
<CustomField>
    <fullName>Margini_Derivati_OTC__c</fullName>
    <label>Margini Derivati OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>