BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Minter_Lordo_PA_FS__c.field-meta.xml
<CustomField>
    <fullName>Minter_Lordo_PA_FS__c</fullName>
    <formula>Margine_finanziario_progressivo_anno_FS__c + Commissioni_Totali_FS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minter Lordo PA FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>