BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Minter_Lordo_PA_IB__c.field-meta.xml
<CustomField>
    <fullName>Minter_Lordo_PA_IB__c</fullName>
    <formula>Minter_Lordo_PA_FS__c + Commissioni_CF__c + Margini_Derivati_OTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minter Lordo PA IB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>