BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Minter_Netto_PA_FS__c.field-meta.xml
<CustomField>
    <fullName>Minter_Netto_PA_FS__c</fullName>
    <formula>Minter_Lordo_PA_FS__c + PA_FS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minter Netto PA FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>