BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/PA_FS__c.field-meta.xml
<CustomField>
    <fullName>PA_FS__c</fullName>
    <label>PA FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>