BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/PA_IB__c.field-meta.xml
<CustomField>
    <fullName>PA_IB__c</fullName>
    <label>PA IB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>