BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/SML_Progressivo_anno_FS__c.field-meta.xml
<CustomField>
    <fullName>SML_Progressivo_anno_FS__c</fullName>
    <label>SML Progressivo anno FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>