BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Spread_Finanziario_FS__c.field-meta.xml
<CustomField>
    <fullName>Spread_Finanziario_FS__c</fullName>
    <label>Spread Finanziario FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>