BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Stock_FS_al_31_12__c.field-meta.xml
<CustomField>
    <fullName>Stock_FS_al_31_12__c</fullName>
    <label>Stock FS al 31/12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>