BPER/DEVF/force-app/main/default/objects/Budget_CIB__c/fields/Volumi_Erogato_puro_Finanza_Strutturata__c.field-meta.xml
<CustomField>
    <fullName>Volumi_Erogato_puro_Finanza_Strutturata__c</fullName>
    <label>Volumi Erogato puro Finanza Strutturata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>